--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Malloy Composer</title>
+    <title>Malloy Composer BQ Tables</title>
     <link rel="stylesheet" href="https://malloydata.github.io/malloy-samples/wasm/dist/app.css" />
     <script src="https://malloydata.github.io/malloy-samples/wasm/dist/app.js" async defer></script>
   </head>
